Somewhat fixed spacing up to Stories

--- a/styles.css
+++ b/styles.css
@@ -14,11 +14,14 @@ body {
 header{
     background-color: white;
     font-size: 18px;
+    padding-left: 100px;
+    padding-right: 100px;
 }
 
 header div{
     display:flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 nav ul li a{
@@ -58,6 +61,7 @@ li{
 
 .overview-hero-image{
     padding-left: 100px;
+    padding-right: 50px;
     float: left;
 }
 
@@ -81,6 +85,7 @@ li{
 .learn-about h2{
     font-size: 24px;
     color: #48BB78;
+    padding-left: 100px;
 }
 
 .cards{
@@ -116,24 +121,50 @@ li{
     /* background-color: #4A5568; */
     color: white;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    padding-left: 115px;
+    grid-template-columns: 300px 300px 150px;
+    /* grid-template-columns: auto auto min-content ; */
+    padding-left: 160px;
+    padding-top: 35px;
+    padding-bottom: 35px;
+    /* justify-content: space-between; */
+    /* align-content: center; */
+    gap: 40px;
+    grid-auto-flow: column;
+    align-items: center;
+    justify-items: center;
+
+    /*
+    grid-template-columns: 300px 250px 150px;
+    padding-left: 160px;
+    padding-top: 35px;
+    padding-bottom: 35px;
+    gap: 20px;
+    */
 }
 
 .testing-desciption{
+    /* padding-left: 100px; */
     grid-column: 1/3;
 }
 
 .cta{
     background-color: #48BB78;
     border-radius: 5px;
-    grid-column: 3/4;
+    grid-column: 3;
     /* text-align: center;
     align-content: center; */
     display: flex;
-    align-items: center;
-    /* justify-content: center; */ /*<- Works to centre text horizontally in div | Other things commented out do not help.*/
+    /*align-items: center; /*<- Works to centre text vertically in div */
+    justify-content: center; /*<- Works to centre text horizontally in div *only if grid column set| Other things commented out do not help.*/
     /* justify-items: center; */
+    height: max-content;
+    width: max-content;
+    padding: 10px;
+}
+
+.stories .container{
+    padding-left: 200px; /* 160*/
+    /* padding-right: 150px; */
 }
 
 .stories .container h2{
